# wspr-recorder

./: .gitignore  ALL_WSPR.TXT  CLAUDE.md  LICENSE  README.md  config.toml.example  deploy.toml  hashtable.txt  inspect_ka9q.py  inspect_ka9q_methods.py  inspect_verify_channel.py  install.sh  pyproject.toml  run_isolated.sh  wspr_spots.txt  wspr_timer.out
docs/: ARCHITECTURE.md  CONFIG.md  INSTALL.md  OPERATIONS.md  PHASE-2-COORDINATION.md  REQUIREMENTS.md  SIGMOND-CONTRACT.md
scripts/: config-wizard.sh  deploy.sh
systemd/: wspr-recorder@.service  wspr-uploader.service
tests/: __init__.py  test_authority_reader.py  test_band_recorder_ring.py  test_band_recorder_sync_monitor.py  test_band_recorder_tier_alarm.py  test_callsign_db.py  test_config.py  test_configurator.py  test_contract.py  test_cycle_batcher.py  test_decode_mode.py  test_decoder.py  test_drift_tracker.py  test_hs_uploader_shim.py  test_lifetime.py  test_noise.py  test_ring_buffer.py  test_spot_processor.py  test_spot_sink.py  test_sync_strategy.py  test_upload_wake.py  test_watchdog_gate.py  test_wav_writer_cleanup.py  test_wizard_dispatch.py  test_wsprnet_reject_cache.py
tests/fixtures/: test-config.toml
wspr_recorder/: __init__.py  __main__.py  _malloc_trim.py  authority_reader.py  band_recorder.py  callsign_db.py  cli.py  config.py  configurator.py  contract.py  decode_mode.py  decoder.py  drift_tracker.py  hs_uploader_shim.py  ipc_server.py  noise.py  receiver_manager.py  ring_buffer.py  rtp_ingest.py  sigmond_tui.py  spot_processor.py  spot_sink.py  sync_strategy.py  timing_service.py  upload_wake.py  uploader_daemon.py  utils.py  version.py  wav_writer.py  wspr_ctl.py  wsprdaemon_verifier.py  wsprnet_audit.py  wsprnet_mirror_backstop.py  wsprnet_verifier.py
