[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wspr-recorder"
version = "0.1.0"
description = "WSPR audio recorder using ka9q-radio RTP streams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael James Hauan", email = "ac0g@hauan.org"}
]
keywords = ["wspr", "sdr", "ka9q", "radio", "recording"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    "ka9q-python>=3.20.0",
    "numpy>=1.20.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "callhash>=1.0.0",
    "hs-uploader>=0.1.0",
]

[tool.uv.sources]
# editable=true so a `git pull` of any sibling propagates to this consumer's
# venv without a reinstall.  Matches the suite-wide "one source tree, many
# editable consumers" convention; see sigmond/CLAUDE.md "Fleet upgrade pattern".
# ka9q-python listed here too because the existing convention on bee1 has it
# editable in every consumer venv -- declaring it explicitly preserves that
# behavior under uv sync (which would otherwise resolve >=3.14.0 from PyPI
# as a non-editable wheel).  The base "ka9q-python>=3.14.0" dependency above
# still controls what published version PyPI consumers get.
callhash    = { path = "../callhash",    editable = true }
hs-uploader = { path = "../hs-uploader", editable = true }
ka9q-python = { path = "../ka9q-python", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wspr-recorder = "wspr_recorder.cli:main"
wspr-ctl = "wspr_recorder.wspr_ctl:main"

[project.urls]
Homepage = "https://github.com/HamSCI/wspr-recorder"
Repository = "https://github.com/HamSCI/wspr-recorder"

[tool.setuptools.packages.find]
where = ["."]
include = ["wspr_recorder*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
